--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+# pyxb needs a custom installation
+#PyXB==1.2.2
 argparse==1.2.1
 distribute==0.6.24
 ipython==1.1.0
+lxml==3.2.3
 requests==2.0.0
 wsgiref==0.1.2
