added logging configuration and setup

--- a/pyoseo/settings.cfg
+++ b/pyoseo/settings.cfg
@@ -1,6 +1,35 @@
 # configuration file for pyoseo
 
-[General]
+[general]
 
-version: 1.0.0
-encoding: utf-8
+version = 1.0.0
+encoding = utf-8
+
+[loggers]
+keys = root
+
+[handlers]
+keys = console, syslog
+
+[formatters]
+keys = short_format
+
+[logger_root]
+level = NOTSET
+handlers = console, syslog
+
+[handler_console]
+class = StreamHandler
+level = INFO
+formatter = short_format
+args = (sys.stderr,)
+
+[handler_syslog]
+class = handlers.SysLogHandler
+level = DEBUG
+formatter = short_format
+args = ('/dev/log',)
+
+[formatter_short_format]
+format = %(name)s %(levelname)s %(message)s
+datefmt =
