worked in the GetCapabilities class

--- a/pyoseo/settings.cfg
+++ b/pyoseo/settings.cfg
@@ -16,11 +16,13 @@ keys = short_format
 
 [logger_root]
 level = NOTSET
-handlers = console, syslog
+#handlers = console, syslog
+handlers = console
 
 [handler_console]
 class = StreamHandler
-level = INFO
+#level = INFO
+level = DEBUG
 formatter = short_format
 args = (sys.stderr,)
 
