--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
 # pyxb needs a custom installation
-#PyXB==1.2.2
+#PyXB==1.2.3
 argparse==1.2.1
 distribute==0.6.24
 ipython==1.1.0
 lxml==3.2.3
 requests==2.0.0
 wsgiref==0.1.2
+Flask==0.10.1
+Flask-Admin==1.0.7
+Flask-Login==0.2.9
+Flask-SQLAlchemy==1.0
+Jinja2==2.7.2
+MarkupSafe==0.18
+SQLAlchemy==0.9.2
+WTForms==1.0.5
+Werkzeug==0.9.4
+itsdangerous==0.23
+mixer==2.3.0
