--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # pyxb needs a custom installation
 #PyXB==1.2.3
-argparse==1.2.1
-distribute==0.6.24
+#argparse==1.2.1
+#distribute==0.6.24
 ipython==1.1.0
 lxml==3.2.3
 requests==2.0.0
