--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ lxml==3.2.3
 requests==2.0.0
 celery==3.1.9
 Django==1.6.2
+--editable git+https://ricardogsilva@bitbucket.org/ipmagio/giosystem-core.git#egg=giosystemcore
