--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ requests==2.0.0
 celery==3.1.9
 Django==1.6.2
 --editable git+https://ricardogsilva@bitbucket.org/ipmagio/giosystem-core.git#egg=giosystemcore
+--editable git+https://ricardogsilva@bitbucket.org/ipmagio/giosystem-csw.git#egg=giosystemcsw
