--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-# pyxb needs a custom installation
-#PyXB==1.2.3
 #ipython==1.1.0
 #lxml==3.2.3
 #requests==2.0.0
@@ -11,4 +9,5 @@
 
 --index-url https://pypi.python.org/simple/
 
+PyXB==1.2.3
 --editable .
