--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+#PyXB==1.2.3
 #ipython==1.1.0
 #lxml==3.2.3
 #requests==2.0.0
@@ -9,5 +10,4 @@
 
 --index-url https://pypi.python.org/simple/
 
-PyXB==1.2.3
 --editable .
